# true_lazy_import

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: python-package.yml
spam/: __init__.py
spam/ham/: __init__.py
tests/: test_imports.py
true_lazy_import/: __init__.py  _module_tools.py  exceptions.py  import_tools.py  lazy_context_mgr.py  lazy_loader.py  lazy_module.py  lazy_wrapper.py
